[package]
name = "datetime"
version = "0.1.0"
edition = "2024"

[dependencies]
solar-positioning = "0.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
approx = "0.5.1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true
overflow-checks = false
debug-assertions = false
incremental = false